<resources>
    <string name="app_name">Water_Balance</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_single_page" translatable="false">SinglePageActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="drinks">Drinks</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="more">More</string>
    <string name="to_drink">To Drink</string>
    <string name="time">Time: </string>
    <string name="height">Height: </string>
    <string name="weight">Weight:</string>
    <string name="norm_of_water">Norm of water:</string>
    <string name="height_cm">Height, cm</string>
    <string name="choose">Choose</string>
    <string name="weight_kg">Weight, kg</string>
    <string name="version">Version:</string>
    <string name="edit">Edit</string>


</resources>