<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonFragment"
    android:background="@color/black">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:textColor="@color/white"/>

        <cz.mendelu.water_balance.NormOfWaterView
            android:id="@+id/normOfWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:valueText="@string/norm_of_water"
            app:value="Not set"
            app:image="@drawable/ic_water"
            />

        <cz.mendelu.water_balance.InfoView
            android:id="@+id/heightPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:valueText="@string/height"
            app:value="Not set"
            app:image="@drawable/ic_height"/>

        <cz.mendelu.water_balance.InfoView
            android:id="@+id/weightPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:valueText="@string/weight"
            app:value="Not set"
            app:image="@drawable/ic_weight"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="620dp"
        android:layout_marginStart="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/version"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/grey"/>
    </LinearLayout>

</FrameLayout>